--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <maven-plugin-tools.version>3.5</maven-plugin-tools.version>
         <maven-plugin-api.version>3.5</maven-plugin-api.version>
         <maven-plugin-plugin.version>3.5</maven-plugin-plugin.version>
+        <org.eclipse.aether.version>1.0.2.v20150114</org.eclipse.aether.version>
     </properties>
 
     <dependencyManagement>
@@ -59,6 +60,17 @@
                 <version>${maven.version}</version>
                 <scope>provided</scope>
             </dependency>
+            <dependency>
+                <groupId>org.eclipse.aether</groupId>
+                <artifactId>aether-api</artifactId>
+                <version>${org.eclipse.aether.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.eclipse.aether</groupId>
+                <artifactId>aether-util</artifactId>
+                <version>${org.eclipse.aether.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
@@ -74,6 +86,14 @@
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.aether</groupId>
+            <artifactId>aether-api</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.aether</groupId>
+            <artifactId>aether-util</artifactId>
         </dependency>
     </dependencies>
 
